--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -2152,7 +2152,6 @@ select {
   visibility: hidden;
 }
 .z-select .z-select-box {
-  display: flex;
   align-items: center;
   position: absolute;
   top: 0;
@@ -2166,13 +2165,18 @@ select {
   line-height: 1.2;
   color: #222529;
   background-color: #FFFFFF;
-  padding: 0 1rem;
   border-radius: 0.125rem;
   -webkit-border-radius: 0.125rem;
   -moz-border-radius: 0.125rem;
   border: 0.0625rem solid #CFD5D9;
-  overflow: hidden;
   cursor: pointer;
+  display: block;
+  max-width: 100%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  word-wrap: normal;
+  padding: 0.5625rem 1.75rem 0.5625rem 1rem;
 }
 .z-select .z-select-box:not(.readonly):hover {
   outline: 0;
@@ -2211,6 +2215,7 @@ select {
   -o-transform: rotate(90deg);
   -ms-transform: rotate(90deg);
   transform: rotate(90deg);
+  margin-top: -0.1875rem;
 }
 .z-select .z-select-box.readonly {
   background-color: transparent;
@@ -2253,7 +2258,6 @@ select {
   box-shadow: 0 0 0.125rem 0 #CFD5D9;
 }
 .z-select .z-select-options li {
-  padding: 0.5625rem 0;
   margin: 0 0.3125rem;
   text-indent: 0.6875rem;
   align-items: center;
@@ -2261,7 +2265,8 @@ select {
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1.2;
-  display: flex;
+  padding: 0.5625rem 1.75rem 0.5625rem 0;
+  display: block;
   max-width: 100%;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -2288,6 +2293,7 @@ select {
   background-position-x: center;
   background-position-y: center;
   content: "";
+  padding-top: 0.9375rem;
 }
 
 .z-slider {
