#11349 - [커스텀코드] 보기 권한만 있는 사용자의 경우 조건의 값이 출력 되지 않는다.
* 코드 분석 결과, view페이지를 로드할 때 JS에서 customCode의 타입이 table일 때, 조건을 변수에 담고 조건이 null이 아닌경우 실행되는 코드에 문제를 발견 하였다.

 - condition[data]는 조건의 오브젝트를 전체 출력하여 [object Object]형식으로 출력 해당 조건의 입력된 값만 가져오기 위해 condition[data].conditionValue로 변경

 * columnName을 가져오는 코드는 보기가 어려워서 팀장님께 도움을 요청하였다.
  - getColumnName()함수에서 data를 입력값으로 주면 Object.keys(condition).forEach(function (data)로 인해 해당 오브젝트의 키값만 입력된다.
  - getColumnName()함수 안의 if비교값이 맞지않아 해당 리턴값을 출력하지 못하였다.(오브젝트 === 숫자값)
  - getColumnName(condition[data].conditionKey) 로 입력하여 비교대상을 맞췄다.

  * 그외 디자인 수정(라디오버튼 간격 수정, 조건 input 클래스 추가로 css추가)

--- a/src/main/resources/public/template/custom-code/customCodeView.html
+++ b/src/main/resources/public/template/custom-code/customCodeView.html
@@ -18,12 +18,12 @@
     <div class="flex-column z-view-row">
         <label th:text="#{customCode.label.type}"></label>
         <div class="flex-row mr-auto">
-            <label class="z-radio mr-4" for="table" tabindex="0">
+            <label class="z-radio" for="table" tabindex="0">
                 <input id="table" name="type" type="radio"
                        th:checked="${customCode?.type == null || customCode?.type == 'table'}"
                        onclick="changeContainer('table')" disabled>
                 <span></span>
-                <span class="z-label" th:text="#{customCode.label.table}"></span>
+                <span class="z-label mr-4" th:text="#{customCode.label.table}"></span>
             </label>
             <label class="z-radio" for="code" tabindex="0">
                 <input id="code" name="type" type="radio"
@@ -100,10 +100,10 @@
                     divRow.classList.add('flex-row', 'z-view-row');
 
                     const conditionInput = document.createElement('input');
-                    conditionInput.classList.add('col-6');
+                    conditionInput.classList.add('z-input', 'col-6');
                     conditionInput.type = 'text';
                     conditionInput.maxLength = 100;
-                    conditionInput.value = getColumnName(data);
+                    conditionInput.value = getColumnName(condition[data].conditionKey);
                     conditionInput.disabled = true;
 
                     const equalSpan = document.createElement('span');
@@ -111,10 +111,10 @@
                     equalSpan.textContent = '=';
 
                     const valueInput = document.createElement('input');
-                    valueInput.classList.add('col-6');
+                    valueInput.classList.add('z-input', 'col-6');
                     valueInput.type = 'text';
                     valueInput.maxLength = 100;
-                    valueInput.value = condition[data];
+                    valueInput.value = condition[data].conditionValue;
                     valueInput.disabled = true;
 
                     divRow.appendChild(conditionInput);
