--- a/src/main/resources/public/template/chart/chartEdit.html
+++ b/src/main/resources/public/template/chart/chartEdit.html
@@ -59,7 +59,7 @@
                 <select id="operationSelectBox" name="operationSelectBox">
                     <option th:each="operation:${code.operation}" th:value="${operation.codeValue}"
                             th:text="${operation.codeName}"
-                            th:selected="${operation.codeValue} == ${chart?.operation}"></option>
+                            th:selected="${operation.codeValue} == ${chart?.chartConfig?.operation}"></option>
                 </select>
             </div>
             <div class="flex-column z-edit-row col-3">
@@ -67,7 +67,7 @@
                 <label id="periodUnitLabel" class="field-label required" th:text="#{chart.label.periodUnit}"></label>
                 <select id="periodUnitSelectBox" name="periodUnitSelectBox">
                     <option th:each="unit:${code.unit}" th:value="${unit.codeValue}"
-                            th:text="${unit.codeName}" th:selected="${unit.codeValue} == ${chart?.periodUnit}"></option>
+                            th:text="${unit.codeName}" th:selected="${unit.codeValue} == ${chart?.chartConfig?.periodUnit}"></option>
                 </select>
             </div>
             <div class="z-edit-row">
@@ -79,7 +79,7 @@
                             <select id="rangeType" name="rangeType">
                                 <option th:each="unit:${code.range}" th:value="${unit.codeValue}"
                                         th:text="${unit.codeName}"
-                                        th:selected="${unit.codeValue} == ${chart?.rangeType}"></option>
+                                        th:selected="${unit.codeValue} == ${chart?.chartConfig?.range?.type}"></option>
                             </select>
                         </div>
                     </div>
@@ -111,7 +111,7 @@
                 <!--/* 그룹 */-->
                 <div class="flex-column col-6">
                     <label id="groupLabel" class="field-label required" th:text="#{chart.label.group}"></label>
-                    <input type="text" id="targetGroup" name="targetGroup" class="z-input" th:value="${chart?.group}" maxlength="100"/>
+                    <input type="text" id="targetGroup" name="targetGroup" class="z-input" th:value="${chart?.chartConfig?.group}" maxlength="100"/>
                 </div>
             </div>
             <div class="flex-row justify-content-between z-edit-row">
@@ -209,7 +209,7 @@
      * chart preview
      */
     function previewChart() {
-        if (emptyValidation() && isValidation()) {
+        if (isValidation() && isValidation()) {
             let chartInfo = setChartInfo()
             restSubmit('post', '/rest/charts/' + chartId + '/preview', chartInfo, function (response) {
                 let responseJson = JSON.parse(response);
@@ -223,7 +223,7 @@
      * chart 저장 / 수정
      */
     function saveChart(method) {
-        if (emptyValidation() && isValidation()) {
+        if (isValidation() && isValidation()) {
             let chartInfo = setChartInfo(method, chartId);
             let url = '/rest/charts';
             if (chartInfo.chartId !== undefined) {
@@ -233,7 +233,7 @@
                 switch (result) {
                     case STATUS_SUCCESS:
                         aliceAlert.alertSuccess(i18n.msg('common.msg.save'), function () {
-                            location.reload()
+                            location.href = '/charts/search';
                         });
                         break;
                     default:
@@ -299,7 +299,8 @@
         }
     }
 
-    function emptyValidation() {
+    // 화면 필수값 검증
+    function isValidation() {
         if (isEmpty('chartName', 'chart.msg.enterChartName')) {
             return false
         }
@@ -363,40 +364,6 @@
     /** chartConfig 파싱 진행 **/
     function parsedPropertyJson(chartConfig, property) {
         chart.parsedPropertyJson(chartConfig, property);
-    }
-
-    // 화면 필수값 검증
-    function isValidation() {
-        let isValid = true;
-        let chartType = document.getElementById('typeSelectBox').value;
-        if (chartType === BASIC_LINE_CHART || chartType === STACKED_COLUMN_CHART) {
-            let periodUnit = document.getElementById('periodUnitSelectBox').value;
-            let durationUnit = document.getElementById('rangeType').value;
-            switch (durationUnit) {
-                case CHART_MONTH:
-                    if (periodUnit === CHART_YEAR) {
-                        isValid = false;
-                        aliceAlert.alertDanger(i18n.msg('chart.msg.periodUnitOutOfRange'));
-                        return false;
-                    }
-                    break;
-                case CHART_DAY:
-                    if (periodUnit === CHART_YEAR || periodUnit === CHART_MONTH) {
-                        isValid = false;
-                        aliceAlert.alertDanger(i18n.msg('chart.msg.periodUnitOutOfRange'));
-                        return false;
-                    }
-                    break;
-                case CHART_HOUR:
-                    if (periodUnit === CHART_YEAR || periodUnit === CHART_MONTH || periodUnit === CHART_DAY) {
-                        isValid = false;
-                        aliceAlert.alertDanger(i18n.msg('chart.msg.periodUnitOutOfRange'));
-                        return false;
-                    }
-                    break;
-            }
-        }
-        return isValid;
     }
 
     // 전송할 데이터 셋팅
