* custom code 컴포넌트 모달 버그 수정 * i18n.msg 관련 따옴표가 함께 나오는 버그 수정 * i18n.msg 관련 따옴표 코드컨벤션 수정

--- a/src/main/resources/public/template/chart/chartSearch.html
+++ b/src/main/resources/public/template/chart/chartSearch.html
@@ -297,7 +297,7 @@
             chartId, {}, function (result) {
             switch (result) {
                 case STATUS_SUCCESS:
-                    aliceAlert.alertSuccess('[[#{common.msg.delete}]]', function () {
+                    aliceAlert.alertSuccess(i18n.msg('common.msg.delete'), function () {
                         location.reload();
                     });
                     break;
