--- a/src/main/resources/public/template/image/imageList.html
+++ b/src/main/resources/public/template/image/imageList.html
@@ -212,7 +212,7 @@
                 labelElem.textContent = modifyName;
                 labelElem.parentNode.parentNode.parentNode.querySelector('button').dataset.name = modifyName;
             } else {
-                aliceAlert.alertWarning(i18n.msg("image.msg.failedRename"));
+                aliceAlert.alertWarning(i18n.msg('image.msg.failedRename'));
             }
         });
     }
