--- a/src/main/resources/public/template/cmdb/class/classEdit.html
+++ b/src/main/resources/public/template/cmdb/class/classEdit.html
@@ -245,7 +245,7 @@
         if (isEmpty('txtClassName', 'cmdb.class.msg.enterClassName')) return;
         if (isEmpty('txtClassSeq', 'cmdb.class.msg.enterClassSeq')) return;
         if (document.getElementsByName('attribute').length === 0) {
-            aliceAlert.alertWarning(i18n.msg("cmdb.class.msg.enterAttributeList"));
+            aliceAlert.alertWarning(i18n.msg('cmdb.class.msg.enterAttributeList'));
             return;
         }
         let attributeList = [];
