--- a/src/main/resources/public/template/notice/noticeSearch.html
+++ b/src/main/resources/public/template/notice/noticeSearch.html
@@ -59,7 +59,7 @@
         if (element.id === 'fromDt') {
             const toDtValue = document.getElementById('searchToDt').value;
             if (i18n.systemDate(toDtValue) < i18n.systemDate(element.value)) {
-                aliceAlert.alertWarning(i18n.msg("common.msg.selectBeforeDate", toDtValue), function () {
+                aliceAlert.alertWarning(i18n.msg('common.msg.selectBeforeDate', toDtValue), function () {
                     document.getElementById('fromDt').value = searchFromDt;
                     picker.open();
                 });
@@ -69,7 +69,7 @@
         } else {
             const fromDtValue = document.getElementById('fromDt').value;
             if (i18n.systemDate(fromDtValue) > i18n.systemDate(element.value)) {
-                aliceAlert.alertWarning(i18n.msg("common.msg.selectAfterDate", fromDtValue), function () {
+                aliceAlert.alertWarning(i18n.msg('common.msg.selectAfterDate', fromDtValue), function () {
                     document.getElementById('searchToDt').value = searchToDt;
                     picker.open();
                 });
