--- a/src/main/resources/public/template/token/tokenSearch.html
+++ b/src/main/resources/public/template/token/tokenSearch.html
@@ -82,7 +82,7 @@
         if (element.id === 'searchFromDt') {
             const toDtValue = document.getElementById('toDt').value;
             if (i18n.systemDate(toDtValue) < i18n.systemDate(element.value)) {
-                aliceAlert.alertWarning(i18n.msg("common.msg.selectBeforeDate", toDtValue), function () {
+                aliceAlert.alertWarning(i18n.msg('common.msg.selectBeforeDate', toDtValue), function () {
                     document.getElementById('searchFromDt').value = searchFromDt;
                     picker.open();
                 });
@@ -92,7 +92,7 @@
         } else {
             const fromDtValue = document.getElementById('searchFromDt').value;
             if (i18n.systemDate(fromDtValue) > i18n.systemDate(element.value)) {
-                aliceAlert.alertWarning(i18n.msg("common.msg.selectAfterDate", fromDtValue), function () {
+                aliceAlert.alertWarning(i18n.msg('common.msg.selectAfterDate', fromDtValue), function () {
                     document.getElementById('toDt').value = searchToDt;
                     picker.open();
                 });
