* i18n.msg 관련 따옴표가 함께 나오는 버그 수정

--- a/src/main/resources/public/template/code/codeEdit.html
+++ b/src/main/resources/public/template/code/codeEdit.html
@@ -280,19 +280,19 @@
         };
 
         if (jsonData.code === null || jsonData.code.trim() === '') {
-            aliceAlert.alertWarning('[[#{code.msg.enterCode}]]');
+            aliceAlert.alertWarning([[#{code.msg.enterCode}]]);
             return false;
         }
 
         if (jsonData.pCode === null || jsonData.pCode.trim() === '') {
-            aliceAlert.alertWarning('[[#{code.msg.enterPCode}]]');
+            aliceAlert.alertWarning([[#{code.msg.enterPCode}]]);
             return false;
         }
 
         const codeLangList = document.querySelectorAll('input[name=codeLangValue]');
         for (let i = 0; i < codeLangList.length; i++) {
             if (codeLangList[i].value.trim() === "") {
-                aliceAlert.alertWarning('[[#{code.msg.enterCodeLangValue}]]');
+                aliceAlert.alertWarning([[#{code.msg.enterCodeLangValue}]]);
                 return false;
             }
         }
