--- a/src/main/resources/public/template/workflow/workFlowSearch.html
+++ b/src/main/resources/public/template/workflow/workFlowSearch.html
@@ -312,11 +312,11 @@
         aliceAlert.confirm(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/workflows/' +
             documentId, {}, function(result) {
             if (JSON.parse(result)) {
-                aliceAlert.alertSuccess('[[#{common.msg.delete}]]', function() {
+                aliceAlert.alertSuccess([[#{common.msg.delete}]], function() {
                     location.reload();
                 });
             } else {
-                aliceAlert.alertWarning('[[#{document.msg.launchedInstance}]]');
+                aliceAlert.alertWarning([[#{document.msg.launchedInstance}]]);
             }
         }, false);
     }
