#11030 편집화면 동작 및 차트 출력, 테스트간 정리

--- a/src/main/resources/public/template/report/reportView.html
+++ b/src/main/resources/public/template/report/reportView.html
@@ -88,7 +88,7 @@
             chartTarget.insertAdjacentHTML('beforeend', element);
 
             setChart(data.chartType, data.propertyJson, data.chartId + '_chart');
-            parsedPropertyJson(data.chartConfig, data.propertyJson);
+            parsedPropertyJson(data.chartType, data.chartConfigStr, data.propertyJson);
         }
 
         /** 하이차트 초기화 */
@@ -97,8 +97,8 @@
         }
 
         /** chartConfig 파싱 진행 **/
-        function parsedPropertyJson(chartConfig, property) {
-            chart.parsedPropertyJson(chartConfig, property);
+        function parsedPropertyJson(chartType, chartConfig, property) {
+            chart.parsedPropertyJson(chartType, chartConfig, property);
         }
         /*]]>*/
     </script>
