--- a/src/main/resources/public/template/chart/chartEdit.html
+++ b/src/main/resources/public/template/chart/chartEdit.html
@@ -30,8 +30,8 @@
             <div id="container" class="chart-content-view"></div>
         </div>
         <form id="frm" method="post">
-            <input type="hidden" id="propertyJson" name="propertyJson" th:value="${chart?.propertyJson}"/>
-            <input type="hidden" id="chartConfig" name="chartConfig" th:value="${chart?.chartConfig}"/>
+            <input type="hidden" id="propertyJson" name="propertyJson" th:value="|${chart?.propertyJson}|"/>
+            <input type="hidden" id="chartConfig" name="chartConfig" th:value="|${chart?.chartConfigStr}|"/>
             <div class="flex-column z-edit-row">
                 <h4 class="sub-title under-bar bold" th:text="#{chart.label.defaultInfo}"></h4>
             </div>
@@ -44,11 +44,13 @@
             </div>
             <div class="flex-column z-edit-row col-4">
                 <label class="field-label required" th:text="#{chart.label.name}"></label>
-                <input type="text" id="chartName" name="chartName" class="z-input" th:value="${chart?.chartName}" maxlength="100"/>
+                <input type="text" id="chartName" name="chartName" class="z-input" th:value="${chart?.chartName}"
+                       maxlength="100"/>
             </div>
             <div class="flex-column z-edit-row">
                 <label class="field-label" th:text="#{chart.label.description}"></label>
-                <input type="text" id="chartDesc" name="chartDesc" class="z-input" th:value="${chart?.chartDesc}" maxlength="100"/>
+                <input type="text" id="chartDesc" name="chartDesc" class="z-input" th:value="${chart?.chartDesc}"
+                       maxlength="100"/>
             </div>
             <div class="flex-column z-edit-row">
                 <h4 class="sub-title under-bar bold" th:text="#{chart.label.queryInfo}"></h4>
@@ -62,12 +64,13 @@
                             th:selected="${operation.codeValue} == ${chart?.chartConfig?.operation}"></option>
                 </select>
             </div>
-            <div class="flex-column z-edit-row col-3">
+            <div class="flex-column z-edit-row col-3" id="periodUnit">
                 <!--/* 간격 */-->
                 <label id="periodUnitLabel" class="field-label required" th:text="#{chart.label.periodUnit}"></label>
                 <select id="periodUnitSelectBox" name="periodUnitSelectBox">
                     <option th:each="unit:${code.unit}" th:value="${unit.codeValue}"
-                            th:text="${unit.codeName}" th:selected="${unit.codeValue} == ${chart?.chartConfig?.periodUnit}"></option>
+                            th:text="${unit.codeName}"
+                            th:selected="${unit.codeValue} == ${chart?.chartConfig?.periodUnit}"></option>
                 </select>
             </div>
             <div class="z-edit-row">
@@ -88,13 +91,15 @@
                         <div class="flex-column col-3 mr-2">
                             <label class="field-label required" th:text="#{common.label.startDate}"></label>
                             <div>
-                                <input type="text" class="z-input i-date-picker search-date" id="rangeFromDt" name="rangeFromDt"/>
+                                <input type="text" class="z-input i-date-picker search-date" id="rangeFromDt"
+                                       name="rangeFromDt" th:value="${chart?.chartConfig?.range.from}"/>
                             </div>
                         </div>
                         <div class="flex-column col-3">
                             <label class="field-label required" th:text="#{common.label.endDate}"></label>
                             <div>
-                                <input type="text" class="z-input i-date-picker search-date" id="rangeToDt" name="rangeToDt"/>
+                                <input type="text" class="z-input i-date-picker search-date" id="rangeToDt"
+                                       name="rangeToDt" th:value="${chart?.chartConfig?.range.to}"/>
                             </div>
                         </div>
                     </div>
@@ -104,14 +109,16 @@
                 <!--/* 차트 대상 태그 */-->
                 <div class="flex-column col-6 mr-4">
                     <label class="field-label required" th:text="#{chart.label.targetTags}"></label>
-                    <input type="text" id="targetTags" name="targetTags" class="z-input col-pct-12" th:value="${chart?.targetTags}"/>
+                    <input type="text" id="targetTags" name="targetTags" class="z-input col-pct-12"
+                           th:value="${chart?.chartConfig?.tags}"/>
                 </div>
             </div>
             <div class="flex-column z-edit-row">
                 <!--/* 그룹 */-->
                 <div class="flex-column col-6">
                     <label id="groupLabel" class="field-label required" th:text="#{chart.label.group}"></label>
-                    <input type="text" id="targetGroup" name="targetGroup" class="z-input" th:value="${chart?.chartConfig?.group}" maxlength="100"/>
+                    <input type="text" id="targetGroup" name="targetGroup" class="z-input"
+                           th:value="${chart?.chartConfig?.group}" maxlength="100"/>
                 </div>
             </div>
             <div class="flex-row justify-content-between z-edit-row">
@@ -119,16 +126,19 @@
                     <a class="z-button secondary" href="/charts/search" th:text="#{common.btn.list}"></a>
                 </div>
                 <div class="z-button-list">
-                    <button sec:authorize="hasAuthority('chart.create')" th:if="!${chart?.chartId}" type="button" id="insert"
+                    <button sec:authorize="hasAuthority('chart.create')" th:if="!${chart?.chartId}" type="button"
+                            id="insert"
                             class="z-button primary" onclick="saveChart('post')" th:text="#{common.btn.register}">
                     </button>
-                    <button sec:authorize="hasAuthority('chart.update')" th:if="${chart?.chartId}" type="button" id="update"
+                    <button sec:authorize="hasAuthority('chart.update')" th:if="${chart?.chartId}" type="button"
+                            id="update"
                             class="z-button primary" onclick="saveChart('put')" th:text="#{common.btn.modify}">
                     </button>
                     <button type="button" id="preview" class="z-button secondary"
                             onclick="previewChart()" th:text="#{common.btn.preview}">
                     </button>
-                    <button sec:authorize="hasAuthority('chart.delete')" th:if="${chart?.chartId}" type="button" id="delete"
+                    <button sec:authorize="hasAuthority('chart.delete')" th:if="${chart?.chartId}" type="button"
+                            id="delete"
                             class="z-button secondary" onclick="deleteChart()" th:text="#{common.btn.delete}">
                     </button>
                 </div>
@@ -154,29 +164,31 @@
     let rangeFromDt = i18n.getDate({'months': -1});
     let rangeToDt = i18n.getDate();
 
-    window.onload = function() {
+    window.onload = function () {
         OverlayScrollbars(document.querySelector('.z-page-content'), {className: 'scrollbar'});
         // date picker 초기화
-        const searchFromDtElement = document.getElementById('rangeFromDt');
+        const fromDtElement = document.getElementById('rangeFromDt');
         const toDtElement = document.getElementById('rangeToDt');
-        searchFromDtElement.value = rangeFromDt;
-        toDtElement.value = rangeToDt;
-        zDateTimePicker.initDatePicker(searchFromDtElement, setDatePicker);
+        if (!fromDtElement.value || !toDtElement.value) {
+            fromDtElement.value = rangeFromDt;
+            toDtElement.value = rangeToDt;
+        }
+        zDateTimePicker.initDatePicker(fromDtElement, setDatePicker);
         zDateTimePicker.initDatePicker(toDtElement, setDatePicker);
 
         // range select event
-        document.getElementById('rangeType').addEventListener('change',(e) => {
+        document.getElementById('rangeType').addEventListener('change', (e) => {
             if (e.target.value !== 'chart.range.between') {
                 document.getElementById('rangeDate').style.visibility = 'hidden';
             } else {
                 document.getElementById('rangeDate').style.visibility = 'visible';
             }
-        })
+        });
         document.getElementById('rangeType').dispatchEvent(new Event('change'));
 
         // chart 초기화
         getChart([[${chart?.chartId}]], [[${chart?.chartType}]], 'edit');
-    }
+    };
 
     function setDatePicker(element, picker) {
         if (typeof picker === 'undefined') {
@@ -185,7 +197,7 @@
         if (element.id === 'rangeFromDt') {
             const toDtValue = document.getElementById('toDt').value;
             if (i18n.systemDate(toDtValue) < i18n.systemDate(element.value)) {
-                aliceAlert.alertWarning(i18n.msg("common.msg.selectBeforeDate", toDtValue), function () {
+                aliceAlert.alertWarning(i18n.msg('common.msg.selectBeforeDate', toDtValue), function () {
                     document.getElementById('rangeFromDt').value = rangeFromDt;
                     picker.open();
                 });
@@ -195,7 +207,7 @@
         } else {
             const fromDtValue = document.getElementById('rangeFromDt').value;
             if (i18n.systemDate(fromDtValue) > i18n.systemDate(element.value)) {
-                aliceAlert.alertWarning(i18n.msg("common.msg.selectAfterDate", fromDtValue), function () {
+                aliceAlert.alertWarning(i18n.msg('common.msg.selectAfterDate', fromDtValue), function () {
                     document.getElementById('rangeToDt').value = rangeToDt;
                     picker.open();
                 });
@@ -210,11 +222,11 @@
      */
     function previewChart() {
         if (isValidation() && isValidation()) {
-            let chartInfo = setChartInfo()
+            let chartInfo = setChartInfo();
             restSubmit('post', '/rest/charts/' + chartId + '/preview', chartInfo, function (response) {
                 let responseJson = JSON.parse(response);
                 setChart(responseJson.chartType, responseJson.propertyJson);
-                parsedPropertyJson(responseJson.chartConfig, responseJson.propertyJson);
+                parsedPropertyJson(responseJson.chartType, responseJson.chartConfigStr, responseJson.propertyJson);
             }, false);
         }
     }
@@ -240,7 +252,7 @@
                         aliceAlert.alertDanger(i18n.msg('common.msg.fail'));
                         break;
                 }
-            })
+            });
         }
     }
 
@@ -260,7 +272,7 @@
                     aliceAlert.alertDanger(i18n.msg('common.msg.fail'));
                     break;
             }
-        })
+        });
     }
 
     /**
@@ -283,9 +295,9 @@
     function getChart(chartId, chartType, target) {
         if (target === 'edit') {
             setDisplay(document.getElementById('typeSelectBox').value);
-            let targetTags = document.getElementById('targetTags').value
+            let targetTags = document.getElementById('targetTags').value;
             document.getElementById('targetTags').value = targetTags.substring(1, targetTags.length - 1);
-            new zTag(document.querySelector('input[name=targetTags]'),{
+            new zTag(document.querySelector('input[name=targetTags]'), {
                 suggestion: false,
                 realtime: false,
                 tagType: 'chart',
@@ -295,21 +307,24 @@
             setChart(chartType, document.getElementById('propertyJson').value);
         }
         if (chartId !== null) {
-            parsedPropertyJson(document.getElementById('chartConfig').value, document.getElementById('propertyJson').value);
+            parsedPropertyJson(
+                document.getElementById('typeSelectBox').value,
+                document.getElementById('chartConfig').value,
+                document.getElementById('propertyJson').value);
         }
     }
 
     // 화면 필수값 검증
     function isValidation() {
         if (isEmpty('chartName', 'chart.msg.enterChartName')) {
-            return false
+            return false;
         }
         if (isEmpty('targetTags', 'chart.msg.enterTargetTags')) {
-            return false
+            return false;
         }
         if (document.getElementById('typeSelectBox').value === BASIC_LINE_CHART) {
             if (isEmpty('targetGroup', 'chart.msg.enterTargetGroup')) {
-                return false
+                return false;
             }
         }
         return true;
@@ -334,11 +349,14 @@
                 }
             }
         }
-        aliceJs.initDesignedSelectTag();
 
         if (value === BASIC_LINE_CHART || value === STACKED_COLUMN_CHART) {
-            document.getElementById('periodUnitLabel').style.display = 'block';
-            document.getElementById('periodUnitSelectBox').style.display = 'block';
+            // 2021-10-06 By Jung Hee Chan
+            // 기간 항목은 드롭박스에 디자인이 입혀지면서 div 가 새로 생김. 이것까지 숨기거나 보여주려면 처리를 아래와 같이 추가.
+            document.getElementById('periodUnit').style.display = '';
+            Array.from(document.getElementById('periodUnit').children).forEach((child) => {
+                child.style.display = '';
+            });
             if (value === BASIC_LINE_CHART) {
                 document.getElementById('groupLabel').style.display = 'block';
                 document.getElementById('targetGroup').style.display = 'block';
@@ -347,11 +365,14 @@
                 document.getElementById('targetGroup').style.display = 'none';
             }
         } else {
-            document.getElementById('periodUnitLabel').style.display = 'none';
-            document.getElementById('periodUnitSelectBox').style.display = 'none';
+            document.getElementById('periodUnit').style.display = 'none';
+            Array.from(document.getElementById('periodUnit').children).forEach((child) => {
+                child.style.display = 'none';
+            });
             document.getElementById('groupLabel').style.display = 'none';
             document.getElementById('targetGroup').style.display = 'none';
         }
+
         // 차트 새로 그리기
         setChart(value, document.getElementById('propertyJson').value);
     }
@@ -362,8 +383,8 @@
     }
 
     /** chartConfig 파싱 진행 **/
-    function parsedPropertyJson(chartConfig, property) {
-        chart.parsedPropertyJson(chartConfig, property);
+    function parsedPropertyJson(chartType, chartConfig, property) {
+        chart.parsedPropertyJson(chartType, chartConfig, property);
     }
 
     // 전송할 데이터 셋팅
@@ -379,31 +400,23 @@
             chartDesc: document.getElementById('chartDesc').value,
             targetTags: tagList,
             chartConfig: {
-                operation: document.getElementById('operationSelectBox').value,
                 range: {
                     type: document.getElementById('rangeType').value,
                     from: document.getElementById('rangeFromDt').value,
                     to: document.getElementById('rangeToDt').value
-                }
-            }
-        }
+                },
+                operation: document.getElementById('operationSelectBox').value,
+                periodUnit: document.getElementById('periodUnitSelectBox').value,
+                group: document.getElementById('targetGroup').value,
+                tags: tagList
+            },
+            chartConfigStr: ''
+        };
 
         if (method === 'put' && chartId !== undefined) {
             chartInfo.chartId = chartId;
         }
 
-        switch (chartInfo.chartType) {
-            case BASIC_LINE_CHART:
-                chartInfo.chartConfig.periodUnit = document.getElementById('periodUnitSelectBox').value;
-                chartInfo.chartConfig.group = document.getElementById('targetGroup').value;
-                break;
-            case STACKED_COLUMN_CHART :
-            case STACKED_BAR_CHART:
-            case LINE_AND_COLUMN_CHART:
-            case ACTIVITY_GAUGE_CHART:
-                chartInfo.chartConfig.periodUnit = document.getElementById('periodUnitSelectBox').value;
-                break;
-        }
         return chartInfo;
     }
 </script>
