#11341 - 다국어미적용
* 해당 페이지에서 하드코딩으로 적혀있어 한글로만 출력 되었다. thymleaf를 이용해 다국어 메세지가 출력되도록 하였다.

--- a/src/main/resources/public/template/dashboard/dashboardView.html
+++ b/src/main/resources/public/template/dashboard/dashboardView.html
@@ -102,7 +102,7 @@
         <input type="hidden" id="searchToDt" name="searchToDt" class="search-date"/>
         <input type="hidden" id="searchTags" name="searchTags" value=""/>
     </form>
-    <h3 class="sub-title">처리할 문서</h3>
+    <h3 class="sub-title" th:text="#{dashboard.label.todoDocument}"></h3>
     <div class="scroll-wrap">
         <div id="tokenList"></div>
     </div>
