#11263 - 필수값 구조 기존대로 변경하고 scss 필수 값 표시 부분 수정

--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -648,12 +648,11 @@ input, button, select, optgroup, textarea {
   color: #8B9094;
 }
 
-.required {
-  font-weight: 700;
-}
 .required::after {
   color: #F52525;
   content: "*";
+  font-weight: 700;
+  margin-left: 0.1875rem;
 }
 
 .text-ellipsis {
