--- a/src/main/resources/public/assets/css/process.css
+++ b/src/main/resources/public/assets/css/process.css
@@ -648,12 +648,11 @@ input, button, select, optgroup, textarea {
   color: #8B9094;
 }
 
-.required {
-  font-weight: 700;
-}
 .required::after {
   color: #F52525;
   content: "*";
+  font-weight: 700;
+  margin-left: 0.1875rem;
 }
 
 .text-ellipsis {
