--- a/src/main/resources/public/template/report/reportTemplatePreview.html
+++ b/src/main/resources/public/template/report/reportTemplatePreview.html
@@ -95,7 +95,7 @@
             chartTarget.insertAdjacentHTML('beforeend', element);
 
             setChart(data.chartType, data.propertyJson, data.chartId + '_chart');
-            parsedPropertyJson(data.chartConfig, data.propertyJson);
+            parsedPropertyJson(data.chartType, data.chartConfig, data.propertyJson);
         }
 
         /** 하이차트 초기화 */
@@ -244,8 +244,9 @@
         }
 
         /** chartConfig 파싱 진행 **/
-        function parsedPropertyJson(chartConfig, property) {
-            let chartConfigJson = JSON.parse(chartConfig);
+        function parsedPropertyJson(chartType, chartConfig, property) {
+            let chartConfigJson = chartConfig; // JSON.parse(chartConfig);
+            chartConfigJson.type = chartType;
             let propertyJson = JSON.parse(property);
 
             /** Get propertyJson Data **/
