--- a/src/main/resources/public/template/chart/chartEdit.html
+++ b/src/main/resources/public/template/chart/chartEdit.html
@@ -92,14 +92,14 @@
                             <label class="field-label required" th:text="#{common.label.startDate}"></label>
                             <div>
                                 <input type="text" class="z-input i-date-picker search-date" id="rangeFromDt"
-                                       name="rangeFromDt" th:value="${chart?.chartConfig?.range.from}"/>
+                                       name="rangeFromDt" th:value="${chart?.chartConfig?.range?.from}"/>
                             </div>
                         </div>
                         <div class="flex-column col-3">
                             <label class="field-label required" th:text="#{common.label.endDate}"></label>
                             <div>
                                 <input type="text" class="z-input i-date-picker search-date" id="rangeToDt"
-                                       name="rangeToDt" th:value="${chart?.chartConfig?.range.to}"/>
+                                       name="rangeToDt" th:value="${chart?.chartConfig?.range?.to}"/>
                             </div>
                         </div>
                     </div>
@@ -187,7 +187,7 @@
         document.getElementById('rangeType').dispatchEvent(new Event('change'));
 
         // chart 초기화
-        getChart([[${chart?.chartId}]], [[${chart?.chartType}]], 'edit');
+        getChart([[${chart?.chartId}]], [[${chart?.chartType}]]);
     };
 
     function setDatePicker(element, picker) {
@@ -292,20 +292,16 @@
         aliceJs.sendXhr(opt);
     }
 
-    function getChart(chartId, chartType, target) {
-        if (target === 'edit') {
-            setDisplay(document.getElementById('typeSelectBox').value);
-            let targetTags = document.getElementById('targetTags').value;
-            document.getElementById('targetTags').value = targetTags.substring(1, targetTags.length - 1);
-            new zTag(document.querySelector('input[name=targetTags]'), {
-                suggestion: false,
-                realtime: false,
-                tagType: 'chart',
-                targetId: chartId
-            });
-        } else if (target === 'view') {
-            setChart(chartType, document.getElementById('propertyJson').value);
-        }
+    function getChart(chartId, chartType) {
+        setDisplay(document.getElementById('typeSelectBox').value);
+        let targetTags = document.getElementById('targetTags').value;
+        document.getElementById('targetTags').value = targetTags.substring(1, targetTags.length - 1);
+        new zTag(document.querySelector('input[name=targetTags]'), {
+            suggestion: false,
+            realtime: false,
+            tagType: 'chart',
+            targetId: chartId
+        });
         if (chartId !== null) {
             parsedPropertyJson(
                 document.getElementById('typeSelectBox').value,
