--- a/src/main/resources/public/template/chart/chartViewModal.html
+++ b/src/main/resources/public/template/chart/chartViewModal.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<input type="hidden" id="propertyJson" name="propertyJson" th:value="${chart?.propertyJson}"/>
-<input type="hidden" id="chartConfig" name="chartConfig" th:value="${chart?.chartConfig}"/>
-<div class="flex-column edit-row mt-2">
+<input type="hidden" id="propertyJson" name="propertyJson" th:value="|${chart?.propertyJson}|"/>
+<input type="hidden" id="chartConfig" name="chartConfig" th:value="|${chart?.chartConfigStr}|"/>
+<div class="flex-column z-edit-row mt-2">
     <div id="container" class="chart-content-view"/>
 </div>
 </body>
