#11326 [신청서] 임시 상태인 신청서와 사용 상태의 신청서가 구분이 갔으면 좋겠다.

--- a/src/main/resources/public/scss/template/mixins/_layout.scss
+++ b/src/main/resources/public/scss/template/mixins/_layout.scss
@@ -200,6 +200,12 @@
           }
         }
       }
+      //임시신청서 상태 표기
+      .document-temp-status {
+        vertical-align: top;
+        font-style: italic;
+        color: $gray400;
+      }
     }
     // TODO: 추후 대시보드 디자인 완료시 아래 부분은 삭제 예정
     // 대시보드 > 소제목
