--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -2813,6 +2813,11 @@ select {
   max-width: 23.75rem;
   margin-top: 3.5rem;
 }
+.z-itsm-container .z-main-content .z-page-result .z-document-row .document-temp-status {
+  vertical-align: top;
+  font-style: italic;
+  color: #ABB0B5;
+}
 .z-itsm-container .z-main-content .z-page-result .sub-title {
   margin: 1.25rem 0;
 }
@@ -3317,6 +3322,11 @@ select {
   font-weight: 400;
   color: #8B9094;
   margin-top: 0.625rem;
+}
+.z-document-content .document-column .document-temp-status {
+  vertical-align: top;
+  font-style: italic;
+  color: #ABB0B5;
 }
 
 .z-token-content,
@@ -7630,5 +7640,3 @@ body.modal-active {
   position: absolute;
   right: 3.75rem;
 }
-
-/*# sourceMappingURL=itsm.css.map */
