#11335 - ci조회화면 태그 nowrap

--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -228,7 +228,7 @@ input, button, select, optgroup, textarea {
 }
 
 .flex-nowrap {
-  flex-wrap: nowrap;
+  flex-wrap: nowrap !important;
 }
 
 .flex-wrap {
