--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -2901,6 +2901,7 @@ select {
   font-weight: 500;
   color: #222529;
   padding: 0 0.9375rem;
+  line-height: 1.5;
 }
 .z-itsm-container .z-main-content .z-page-list .z-list-head tr th:first-child {
   padding-left: 1.25rem;
