--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -2893,6 +2893,9 @@ select {
   width: 100%;
   border: none;
 }
+.z-itsm-container .z-main-content .z-page-list .z-list-head {
+  border-bottom: calc(0.0625rem * 2) solid #CFD5D9;
+}
 .z-itsm-container .z-main-content .z-page-list .z-list-head tr {
   height: 2.5rem;
 }
@@ -2909,7 +2912,6 @@ select {
 .z-itsm-container .z-main-content .z-page-list .z-list-body {
   width: 100%;
   height: 100%;
-  border-top: calc(0.0625rem * 2) solid #CFD5D9;
   border-bottom: 0.0625rem solid #CFD5D9;
 }
 .z-itsm-container .z-main-content .z-page-list .z-list-body tr {
