--- a/src/main/resources/public/scss/template/mixins/_layout.scss
+++ b/src/main/resources/public/scss/template/mixins/_layout.scss
@@ -259,6 +259,7 @@
       }
       // thead
       &-head {
+        @include border(calc(#{$list-border-width} * 2), solid, $list-border-color, bottom);
         tr {
           height: 2.5rem; // 42px
           th {
@@ -276,7 +277,6 @@
       &-body {
         width: 100%;
         height: 100%;
-        @include border(calc(#{$list-border-width} * 2), solid, $list-border-color, top);
         @include border($list-border-width, solid, $list-border-color, bottom);
         tr {
           height: 2.5625rem; // 41px
