#11319 [업무흐름] 업무흐름 추가후 신청서 양식 편집이 나오지 않는다. -> 일감 관련 수정 진행

--- a/src/main/resources/public/template/workflow/workFlowSearch.html
+++ b/src/main/resources/public/template/workflow/workFlowSearch.html
@@ -122,8 +122,9 @@
                     aliceAlert.alertSuccess(i18n.msg('common.msg.save'), function() {
                         if (documentId === undefined) { // 신규 등록일 경우에만 팝업 호출한다.
                             openDocumentDisplay(result);
+                        } else {
+                            location.reload();          
                         }
-                        location.reload();
                     });
                 });
             }
