--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -2630,6 +2630,7 @@ select {
   border-radius: 0.25rem;
   -webkit-border-radius: 0.25rem;
   -moz-border-radius: 0.25rem;
+  width: 100%;
 }
 .z-button-switch-group.vertical .z-button-switch:not(:first-child),
 .z-button-switch-group.vertical .z-button-toggle:not(:first-child),
